Sun Feb 23 19:37:37 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/symbol.c (Symbol_Print): Fix DEBUG build.

Sun Feb 23 19:07:06 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/error.c (errorCore): Flush stdout first.
	(errorCoreLine): Likewise.

Sun Feb 23 17:49:42 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* common.h: Include string.h when strndup or strdup is available.
	Include strings.h when strncasecmp is available.
	Drop include config.h.
	* directive_data.h: Drop include config.h.
	* global.h: Likewise.
	* help_cpu.h: Likewise.
	* lex.h: Likewise.
	* m_cpumem.h: Likewise.
	* os.h: Likewise.
	* output.h: Likewise.
	* reloc.h: Likewise.

Wed Feb 12 02:05:03 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Add support for AM_SILENT_RULES (default enabled).

Thu Feb  6 02:43:40 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (Eval_Unop): Fix eOp_RConst type checking.

Wed Feb  5 01:35:21 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/lex.c (Lex_GetBinop): Support ^ as alias for :EOR:.

Tue Feb  4 23:39:00 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/input.c (Input_Symbol): Remove redundant test.

Tue Feb  4 23:27:00 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* unittests/compare/core/symbols.s: Add extra test.

Tue Feb  4 01:21:40 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (Eval_Binop): Fix behaviour for division by zero case.
	(Eval_Unop): Fix wierd implementation when base register is r0.
	* src/value.c: Fix comment for ValueAddr entries.

Tue Jan 28 02:31:30 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (Eval_Binop): Drop support for ValueAddr for eOp_Mul and
	eOp_And.
	* unittests/compare/core/operator_addition_logical.s: Enhance with
	ValueAddr tests.

Sun Jan 26 18:26:55 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (GetInt): Drop support for ValueSymbol.

Sun Jan  5 14:37:59 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
