@@ -1,3 +1,8 @@
+Tue Feb 25 03:02:44 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/eval.c (Eval_Unop): Support 1 character string and symbol
+	for unary +.  Support 1 character string for :INDEX:.
+
 Sun Feb 23 19:37:37 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/symbol.c (Symbol_Print): Fix DEBUG build.
